--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <h1>Hello world!</h1>
-<p>This is the first file in my new Git Repo.</p>
+<p>This is the first file in my new Git Repo.</p><br>
+<p>l'image de mon futur resto</p><br>
+<img src="images/imgmenu.jpg" alt="image menu">
 </body>
 </html>
