--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <img src="images/imgmenu.jpg" alt="image menu">
 <p>l'images de mon remu</p>
 <img src="images/imgresto.jpg" alt="image menu">
-
+<p>ici c'est votre resto de tjrs</p>
 </body>
 </html>
